@startuml

title __MODULE's Class Diagram__\n

  namespace ch.bfh.ti.academia {
    namespace module {
      class ch.bfh.ti.academia.module.Module {
          - description : String
          - mid : String
          - name : String
          + Module()
          + Module()
          + equals()
          + getCoordinator()
          + getDescription()
          + getMid()
          + getName()
          + hashCode()
          + setCoordinator()
          + setDescription()
          + setMid()
          + setName()
          + toString()
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace module {
      class ch.bfh.ti.academia.module.ModuleController {
          {static} - CONTENT_TYPE_HEADER : String
          {static} - JSON_MEDIA_TYPE : String
          {static} - logger : Logger
          - objectMapper : ObjectMapper
          + doGet()
          + doPut()
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace module {
      class ch.bfh.ti.academia.module.ModuleDTO {
          - description : String
          - mid : String
          + ModuleDTO()
          + ModuleDTO()
          + getDescription()
          + getMid()
          + setDescription()
          + setMid()
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace module {
      class ch.bfh.ti.academia.module.ModuleRepository {
          {static} - DELETE_QUERY : String
          {static} - FIND_ALL_QUERY : String
          {static} - FIND_QUERY : String
          {static} - SELECT_VERSION : String
          {static} - UPDATE_QUERY : String
          - connection : Connection
          {static} - logger : Logger
          + ModuleRepository()
          + delete()
          + find()
          + findAll()
          + update()
          - getModule()
      }
    }
  }
  

  ch.bfh.ti.academia.module.Module o-- ch.bfh.ti.academia.person.PersonDTO : coordinator
  ch.bfh.ti.academia.module.ModuleController -up-|> jakarta.servlet.http.HttpServlet
  ch.bfh.ti.academia.module.ModuleController o-- ch.bfh.ti.academia.util.ConnectionManager : connectionManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
